<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">News Report</string>
    <string name="response">response</string>
    <string name="results">results</string>
    <string name="webTitle">webTitle</string>
    <string name="sectionName">sectionName</string>
    <string name="webUrl">webUrl</string>
    <string name="webPublicationDate">webPublicationDate</string>
    <string name="fields">fields</string>
    <string name="thumbnail">thumbnail</string>
    <string name="tags">tags</string>
    <string name="Query">Query</string>
    <string name="emptyJson">NewsJSON is empty</string>
    <string name="QueryUtils">QueryUtils</string>
    <string name="ProblemWithResults">Problem parsing the News JSON results</string>
    <string name="ProblemWithHTTP">Problem making the HTTP request</string>
    <string name="ErrorWithUrl">Error with creating URL</string>
    <string name="ErrorCode">Error response code:</string>
    <string name="ProblemRetrievingJSON">Problem retrieving the News JSON results</string>

    <string name="no_news">No news found.</string>
    <string name="no_internet_connection">No internet connection.</string>

    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">News Settings</string>

    <string name="settings_search_label">Search</string>
    <string name="settings_Search_default" translatable="false">tech</string>
    <string name="settings_search_key" translatable="false">SearchTerm</string>

    <string name="settings_search_label">Search</string>
    <string name="settings_search_default" translatable="false"></string>
    <string name="settings_search_key" translatable="false">SearchTerm</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_newest_value</string>
    <string name="settings_order_by_newest_label">Newest</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>
    <string name="settings_order_by_oldest_label">Oldest</string>
    <string name="settings_order_by_oldest_value" translatable="false">oldest</string>
    <string name="settings_order_by_relevance_label">Relevance</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>

    <string name="settings_section_label">Section</string>
    <string name="settings_section_key" translatable="false">section</string>
    <string name="settings_section_default" translatable="false"></string>
    <string name="settings_section_default_label">Default</string>
    <string name="settings_section_default_value">default</string>
    <string name="settings_section_artanddesign_label">Art and Design</string>
    <string name="settings_section_artanddesign_value" translatable="false">artanddesign</string>
    <string name="settings_section_books_label">Books</string>
    <string name="settings_section_books_value" translatable="false">books</string>
    <string name="settings_section_business_label">Business</string>
    <string name="settings_section_business_value" translatable="false">business</string>
    <string name="settings_section_cities_label">Cities</string>
    <string name="settings_section_cities_value" translatable="false">cities</string>
    <string name="settings_section_education_label">Education</string>
    <string name="settings_section_education_value" translatable="false">education</string>
    <string name="settings_section_environment_label">Environment</string>
    <string name="settings_section_environment_value" translatable="false">environment</string>
    <string name="settings_section_football_label">Football</string>
    <string name="settings_section_football_value" translatable="false">football</string>
<<<<<<< HEAD

    <!-- Label for order-by title option [CHAR LIMIT=20] -->
    <string name="settings_order_by_title_label">Title</string>
    <string name="settings_order_by_title_value" translatable="false">title</string>

=======
>>>>>>> 8e11210643553488911f1346e3f2ee2b2b494591

</resources>
